# bison-bithumb-alert-bot

./: .env.example  .gitignore  README.md  config.yml  portfolio.example.yml  pyproject.toml
.github/workflows/: scan.yml
src/bison_bot/: __init__.py  bison_playbook.py  bithumb.py  main.py  models.py  portfolio.py  rules.py  scanner.py  state.py  telegram.py  utils.py
state/: sent_signals.json
tests/: conftest.py  test_bison_playbook.py  test_bithumb.py  test_rules.py  test_scanner.py  test_telegram.py
tests/fixtures/: scanner_config.yml
