[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bison-bithumb-alert-bot"
version = "0.1.0"
description = "Bithumb KRW public-market Bison-style chart alert bot"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "pandas>=2.1.0",
  "pydantic>=2.5.0",
  "PyYAML>=6.0.1",
  "python-dotenv>=1.0.0",
  "requests>=2.31.0",
  "tenacity>=8.2.3",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
  "pytest-timeout>=2.3.1",
  "ruff>=0.6.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-q -p no:cacheprovider"

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["E501"]
